Closed Bug 296491 Opened 20 years ago Closed 20 years ago

At first click link in fixed positioned navigation get focus, new page is loaded after second click

Categories

(Core :: Layout: Positioned, defect)

x86
All
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: izsak, Assigned: roc)

References

()

Details

(Keywords: regression, testcase)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050531 Firefox/1.0+ Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050531 Firefox/1.0+ In the page at http://www.mstudio.at/ is fixed positioned navigation. When you click on any link it will only get focused. No page is loaded. Cursor changes to "cancel" at it behaves like when you hold left mouse down on link a move with mouse. New page is loaded after second click. Reproducible: Sometimes Steps to Reproduce: 1. Click on a link in navigation. 2. Click again to go to the new page. Actual Results: After 1st step the <a> is focused, after 2nd step new page is loaded. Expected Results: New page is loaded after first click on <a>. Thi navigation works fine in Firefox 1.0 Gexko engine.
WFM Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.7.8) Gecko/20050509 Firefox/1.0.4 WFM Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050603 Firefox/1.0+ ID:2005060302
I see it on the bottom links using build 2005-06-03-06, Windows XP Seamonkey trunk. I'd like to get a minimized testcase before fully confirming it, though.
Attached file test-case
Reproducible with Mozilla 1.8b2/20050602 and Deer Park a1, but WFM with Mozilla 1.8b1.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression, testcase
Doesn't happen with 2005-03-29 build, happens with 2005-03-30 build. I think it is a regression from fixing bug 255863. To reproduce this in the testcase, click precisely on the text of the links When I click for the first time on the link in the testcase, I see the 'not-allowed' cursor, which you also get when a dragging operation is performed.
Blocks: 255863
*** Bug 296822 has been marked as a duplicate of this bug. ***
You can see this very clearly in the navigation buttons of this presentation/slideshow: http://developer-test.mozilla.org/presentations/xtech2005/keynote/
I can't reproduce. Could this be Windows only?
(In reply to comment #8) > I can't reproduce. Could this be Windows only? Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050618 Firefox/1.0+ ID:2005061805 I can still see it with this build. So, yeah, maybe it's a Windows only issue.
Ere, another windows mouse event handling issue maybe
Quickly looking mouse messages seem to be ok but something else happens when the left button down message is dispatched (or focus is changed).
Also this is a a cross-platform problem. The test case just requires that the window is narrow enough that the menu bar at the bottom overflows to the left of the visible area. What I can say is that something weird happens when an element then gets the focus (when the mouse left button down event is fired). Seems to me that the element jumps causing the mouse to "move". Anyway, this is out of my scope.
OS: Windows XP → All
Attached patch fixSplinter Review
A small error in the mouse synthesis code ... aEvent->point is relative to the widget origin, which does not necessarily coincide with baseView's origin, so we need to correct for that.
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #189742 - Flags: superreview?(dbaron)
Attachment #189742 - Flags: review?(dbaron)
Attachment #189742 - Flags: superreview?(dbaron)
Attachment #189742 - Flags: superreview+
Attachment #189742 - Flags: review?(dbaron)
Attachment #189742 - Flags: review+
Comment on attachment 189742 [details] [diff] [review] fix fixes a regression in event handling
Attachment #189742 - Flags: approval1.8b4?
Blocks: 293638
No longer blocks: 293638
Attachment #189742 - Flags: approval1.8b4? → approval1.8b4+
checked in
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Verified FIXED with testcases: http://developer-test.mozilla.org/presentations/xtech2005/keynote/ https://bugzilla.mozilla.org/attachment.cgi?id=185323 using build 2005-07-20-10 on Windows XP SeaMonkey trunk.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: